[gd_scene load_steps=8 format=3 uid="uid://djby3ss2g5lmp"]

[ext_resource type="FontFile" uid="uid://dc22c7i6h0wfw" path="res://assets/fonts/Kenney Mini.ttf" id="1_ca2qj"]
[ext_resource type="Script" uid="uid://bfoue3prgicjr" path="res://scripts/shop_screen.gd" id="1_neyh7"]
[ext_resource type="Texture2D" uid="uid://b088u1tk4yhgc" path="res://assets/props/icons/StaticApple.png" id="2_kg3i0"]
[ext_resource type="Texture2D" uid="uid://dxyawnt7dee6k" path="res://assets/props/icons/StaticBigHealthPotion.png" id="3_neyh7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbbiy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nrk2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rutho"]

[node name="Shop_Screen" type="Control"]
custom_minimum_size = Vector2(540, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -150.0
offset_right = 270.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neyh7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "X"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "Shop"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "Buy"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
columns = 5

[node name="AppleSlot" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AppleSlot"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AppleSlot/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_kg3i0")
stretch_mode = 5

[node name="AppleButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AppleSlot"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_jbbiy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nrk2k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rutho")

[node name="JuiceSlot" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/JuiceSlot"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/JuiceSlot/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_neyh7")
stretch_mode = 5

[node name="PotionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/JuiceSlot"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_jbbiy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nrk2k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rutho")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "Item Name"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(490, 64)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "Description of the item"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PriceLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "Price:"

[node name="PriceNumber" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ca2qj")
text = "0"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/AppleSlot/AppleButton" to="." method="_on_apple_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer/JuiceSlot/PotionButton" to="." method="_on_potion_button_pressed"]
